Index y producto son las páginas trabajadas

--- a/pages/index.html
+++ b/pages/index.html
@@ -41,7 +41,6 @@
             <!--Producto de ejemplo papelillos-->
             <article class="art-index">
                 <img src="../images/papelillos.jpeg" class="img-catalogo" alt="Papelillos">
-                <a href="./productos.html">
                 <h3>Papelillos</h3></a>
             </article>
             <article class="art-index">
@@ -63,7 +62,7 @@
             </article>
             <article class="art-index">
                 <img src="../images/Kit1.jpg" class="img-catalogo" alt="Kits">
-                <a href="./producto.html"><h3>Kits</h3></a>
+                <a href="./productos.html"><h3>Kits</h3></a>
             </article>
         </section>
     </main>
