--- a/pages/productos.html
+++ b/pages/productos.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <h2> Papelillos </h2>
+        <h2> Kits </h2>
         <section class="sec-productos">
             <article class="art-productos">
                 <div>
