--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -20,26 +20,61 @@
                         <li><a class="enlaces-nav" href="./pages/somos.html">Somos</a></li>
                     </ul>
                 </li>
-                <li><a href=""><h1> Smoke Club </h1></a></li>
-                <li><a href="">Carro</a></li>
+                <li><a href="../index.html"><h1> Smoke Club </h1></a></li>
+                <li><a href="./somos.html">Carro</a></li>
             </ul>
 
         </nav>
     </header>
 
     <main>
-        <h2> Somos </h2>
-        <section> 
-            <div>
-                <!--enlace imagen local del logo-->
-                <img src="../images/SmokeClub.jpeg" alt="Imagen con concepto de la tienda">
-            </div>  
-            <div>
-                Descripcion
-            </div>
+        <h2>Catálogo</h2>
+        <section>
+            <article>
+                <div>
+                    <img src="" alt="">
+                    <h3>Tabacos</h3>
+                </div>
+            </article>
+            <article>
+                <div>
+                    <img src="" alt="">
+                    <h3>Papelillos</h3>
+                </div>
+            </article>
+            <article>
+                <div>
+                    <img src="" alt="">
+                    <h3>Pipas</h3>
+                </div>
+            </article>
+            <article>
+                <div>
+                    <img src="" alt="">
+                    <h3>Encendedores</h3>
+                </div>
+            </article>
+            <article>
+                <div>
+                    <img src="" alt="">
+                    <h3>Filtros</h3>
+                </div>
+            </article>
+            <article>
+                <div>
+                    <img src="" alt="">
+                    <h3>Moledores</h3>
+                </div>
+            </article>
+            <article>
+                <div>
+                    <img src="" alt="">
+                    <a href="./kit1.html"><h3>Kits</h3></a>
+                </div>
+            </article>
         </section>
     </main>
-    
+
     <!--Pie de página-->
     <footer>
         <h2> Contacto </h2>
