--- a/pages/encendedores.html
+++ b/pages/encendedores.html
@@ -20,26 +20,39 @@
                         <li><a class="enlaces-nav" href="./pages/somos.html">Somos</a></li>
                     </ul>
                 </li>
-                <li><a href=""><h1> Smoke Club </h1></a></li>
-                <li><a href="">Carro</a></li>
+                <li><a href="../index.html"><h1> Smoke Club </h1></a></li>
+                <li><a class="enlaces-nav" href="./somos.html">Carro</a></li>
             </ul>
 
         </nav>
     </header>
 
     <main>
-        <h2> Somos </h2>
-        <section> 
-            <div>
-                <!--enlace imagen local del logo-->
-                <img src="../images/SmokeClub.jpeg" alt="Imagen con concepto de la tienda">
-            </div>  
-            <div>
-                Descripcion
-            </div>
+        <h2> Encendedores </h2>
+        <section class="sec-productos">
+            <article class="art-productos">
+                <div>
+                    <img src="" alt="">
+                    <a href="./producto.html"><p>Producto1</p></a>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>Producto2</p>
+                </div>
+            </article>
+            <article class="art-productos">
+                <div>
+                    <img src="" alt="">
+                    <p>Producto3</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>Producto4</p>
+                </div>
+            </article>
         </section>
     </main>
-    
+
     <!--Pie de página-->
     <footer>
         <h2> Contacto </h2>
