--- a/pages/tabacos.html
+++ b/pages/tabacos.html
@@ -13,57 +13,41 @@
     <header>
         <nav>
             <ul>
-                <li><a href="">Menú</a></li>
-                <li><a href=""><h1> Smoke Club </h1></a></li>
-                <li><a href="">Carro</a></li>
+                <li class="submenu"><a class="enlaces-nav" href="#">Menú</a>
+                    <ul>
+                        <li><a class="enlaces-nav" href="./pages/catalogo.html">Catálogo</a></li>
+                        <li><a class="enlaces-nav" href="./pages/kit1.html">Kit 1</a></li>
+                        <li><a class="enlaces-nav" href="./pages/somos.html">Somos</a></li>
+                    </ul>
+                </li>
+                <li><a href="../index.html"><h1> Smoke Club </h1></a></li>
+                <li><a class="enlaces-nav" href="./somos.html">Carro</a></li>
             </ul>
 
         </nav>
     </header>
 
     <main>
-        <h2>Catálogo</h2>
-        <section>
-            <article>
+        <h2> Tabacos </h2>
+        <section class="sec-productos">
+            <article class="art-productos">
                 <div>
                     <img src="" alt="">
-                    <h3>Tabacos</h3>
+                    <a href="./producto.html"><p>Producto1</p></a>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>Producto2</p>
                 </div>
             </article>
-            <article>
+            <article class="art-productos">
                 <div>
                     <img src="" alt="">
-                    <a href="./productos.html"><h3>Papelillos</h3></a>
+                    <p>Producto3</p>
                 </div>
-            </article>
-            <article>
                 <div>
                     <img src="" alt="">
-                    <h3>Pipas</h3>
-                </div>
-            </article>
-            <article>
-                <div>
-                    <img src="" alt="">
-                    <h3>Encendedores</h3>
-                </div>
-            </article>
-            <article>
-                <div>
-                    <img src="" alt="">
-                    <h3>Filtros</h3>
-                </div>
-            </article>
-            <article>
-                <div>
-                    <img src="" alt="">
-                    <h3>Moledores</h3>
-                </div>
-            </article>
-            <article>
-                <div>
-                    <img src="" alt="">
-                    <h3>Kits</h3>
+                    <p>Producto4</p>
                 </div>
             </article>
         </section>
