--- a/pages/filtros.html
+++ b/pages/filtros.html
@@ -13,16 +13,22 @@
     <header>
         <nav>
             <ul>
-                <li><a class="enlaces-nav" href="">Menú</a></li>
-                <li><a href=""><h1> Smoke Club </h1></a></li>
-                <li><a class="enlaces-nav" href="">Carro</a></li>
+                <li class="submenu"><a class="enlaces-nav" href="#">Menú</a>
+                    <ul>
+                        <li><a class="enlaces-nav" href="./pages/catalogo.html">Catálogo</a></li>
+                        <li><a class="enlaces-nav" href="./pages/kit1.html">Kit 1</a></li>
+                        <li><a class="enlaces-nav" href="./pages/somos.html">Somos</a></li>
+                    </ul>
+                </li>
+                <li><a href="../index.html"><h1> Smoke Club </h1></a></li>
+                <li><a class="enlaces-nav" href="./somos.html">Carro</a></li>
             </ul>
 
         </nav>
     </header>
 
     <main>
-        <h2> Kits </h2>
+        <h2> Filtros </h2>
         <section class="sec-productos">
             <article class="art-productos">
                 <div>
