--- a/pages/kit1.html
+++ b/pages/kit1.html
@@ -7,9 +7,9 @@
     <title>Document</title>
     <!--Enlace css-->
     <link rel="stylesheet" href="../css/style.css">
-
+    
 </head>
-<body>
+<body id="body-grilla">
     <header>
         <nav>
             <ul>
@@ -20,28 +20,27 @@
                         <li><a class="enlaces-nav" href="./pages/somos.html">Somos</a></li>
                     </ul>
                 </li>
-                <li><a href=""><h1> Smoke Club </h1></a></li>
-                <li><a href="">Carro</a></li>
+                <li><a href="../index.html"><h1> Smoke Club </h1></a></li>
+                <li><a class="enlaces-nav" href="./somos.html">Carro</a></li>
             </ul>
 
         </nav>
     </header>
 
     <main>
-        <h2> Somos </h2>
-        <section> 
-            <div>
-                <!--enlace imagen local del logo-->
-                <img src="../images/SmokeClub.jpeg" alt="Imagen con concepto de la tienda">
-            </div>  
-            <div>
-                Descripcion
-            </div>
-        </section>
+        <h2> Kit Especial I </h2>
+        <div>
+            <img src="../images/Kit1.jpg"  class="img-prod" alt="kit especial uno">            
+        </div>
+        <h2>Descripcion</h2>
+        <div class="div-descp">
+            <p class="p-descp">En este kit especial encontrarás todo lo necesario para poder fumar a tu manera.
+                Incluye un Tabaco Redfield de la variedad que elijas, filtros gizeh slim de 120 unidades, papelillos OCB ultimate, un encendedor clipper aleatorio, una enroladora Elements, una caja metálica Gizeh y además una bandeja OCB a elección. Es la selección más completa pensada para que no te falte nada al momento de instalarte a disfrutar un tabaco.</p>
+        </div>
     </main>
-    
+
     <!--Pie de página-->
-    <footer>
+    <footer class="gradiente">
         <h2> Contacto </h2>
         <!--enlace iframe visualizador mapa-->
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52018.6276237818!2d-71.68887760846928!3d-35.42596160316939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9665c6a2ac07d07d%3A0x265657feafdac8b8!2sTalca%2C%20Maule!5e0!3m2!1sen!2scl!4v1675038819495!5m2!1sen!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
